[package]
name = "http3_agent"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
quinn = "0.10.0"
rustls = "0.21"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.127"
rmp-serde = "1.1"
rand = "0.8"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
bytes = "1.0"
thiserror = "1.0"